# Master-Degree-projects

./: README.md
CV/lab4/: CMakeLists.txt  t1.cpp  t3.cpp  t4.cpp
CV/project/: CMakeLists.txt
CV/project/data/result/: results.txt
CV/project/data/result/tray1/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt
CV/project/data/result/tray2/bounding_boxes/: food_image_bounding_box.txt  leftover3_bounding_box.txt
CV/project/data/result/tray3/bounding_boxes/: food_image_bounding_box.txt  leftover1_bounding_box.txt
CV/project/data/result/tray4/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt
CV/project/data/result/tray5/bounding_boxes/: food_image_bounding_box.txt  leftover1_bounding_box.txt
CV/project/data/result/tray6/bounding_boxes/: food_image_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt
CV/project/data/result/tray7/bounding_boxes/: leftover1_bounding_box.txt
CV/project/data/result/tray8/bounding_boxes/: leftover1_bounding_box.txt
CV/project/include/: BoundingBox.h  UmboFunct.h  breadFunc.h  circles.h  detection.h  foodSegmentation.h  gt_reader.h  main.h  p_measure.h  saladFunc.h
CV/project/report/result/tray1/bounding_boxes/: leftover1_bounding_box.txt  leftover3_bounding_box.txt
CV/project/report/result/tray2/bounding_boxes/: leftover1_bounding_box.txt  (+1 more)
CV/project/src/: BoundingBox.cpp  UmboFunct.cpp  breadFunc.cpp  circles.cpp  detection.cpp  detection.py  foodSegmentation.cpp  gt_reader.cpp  main.cpp  mainDavid.cpp  p_measure.cpp  saladFunc.cpp
(+108 files in other folders)
